[package]
name = "libp2p-bistream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.25"
serde = "1.0.149"
tokio = { version = "1.22.0", features = ["sync"] }
async-trait = "0.1.59"
tracing = "0.1.37"
async-channel = "1.8.0"
libp2p = { version = "0.50", default-features = false }

[workspace]
members = ["examples/node"]
