[package]
name = "example-node"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
bincode = "1.3.3"
futures = "0.3.25"
serde = "1.0.149"
tokio = { version = "1.22.0", features = ["macros", "sync", "io-std"] }
async-trait = "0.1.59"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
async-channel = "1.8.0"
clap = { version = "4.0.29", features = ["derive"] }
base32 = "0.4.0"
multihash = "0.17.0"
pretty-bytes = "0.2.2"
lz4_flex = "0.9.5"
multibase = "0.9.1"
thiserror = "1.0.37"
libp2p-bistream = { path = "../.." }

[dependencies.libp2p]
version = "0.50"
default-features = false
features = [
  "kad",
  "identify",
  "ping",
  "mdns",
  "noise",
  "yamux",
  "tcp",
  "quic",
  "dns",
  "serde",
  "relay",
  "dcutr",
  "autonat",
  "rsa",
  "tokio",
  "macros",
] 
